{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 3,
  "lineage": "a0bc7e7e-3c81-136b-9a5d-64debf6e4c73",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Edf_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c4e4b4eb2e11d1d4",
            "arn": "arn:aws:ec2:us-east-1:296014597212:instance/i-0570d2495298e69dc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0570d2495298e69dc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Tf_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-031746fc182df58f0",
            "private_dns": "ip-10-230-0-30.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.230.0.30",
            "public_dns": "ec2-34-227-49-221.compute-1.amazonaws.com",
            "public_ip": "34.227.49.221",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0486eff333b795985",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03506bbf9789f5ac5",
            "tags": {
              "Name": "Edf_ec2"
            },
            "tags_all": {
              "Name": "Edf_ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a00a50d58e3e1845"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2-sg01",
            "aws_subnet.pub_subnet",
            "aws_vpc.Edf_vpc",
            "data.aws_ami.linux2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Edf_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:296014597212:internet-gateway/igw-0caae91716dd27350",
            "id": "igw-0caae91716dd27350",
            "owner_id": "296014597212",
            "tags": {
              "Name": "Edf_igw"
            },
            "tags_all": {
              "Name": "Edf_igw"
            },
            "vpc_id": "vpc-023617f000410c2ac"
          },
          "dependencies": [
            "aws_vpc.Edf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "my-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "desync_mitigation_mode": "defensive",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:296014597212:loadbalancer/app/my-application-alb/846c03f2ceb1fb08",
            "idle_timeout": 60,
            "internal": false,
            "load_balancer_type": "application",
            "name": "my-application-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0002893ff5782161a"
            ],
            "subnets": [
              "subnet-03506bbf9789f5ac5",
              "subnet-0ddb1c4bb0cb8c402"
            ],
            "tags": {
              "Name": "Edf_alb"
            },
            "tags_all": {
              "Name": "Edf_alb"
            }
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_subnet.pub_subnet",
            "aws_vpc.Edf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "Edf_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "Edf_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:296014597212:targetgroup/tf-20221111175940140500000001/45690831f4838280",
            "arn_suffix": "targetgroup/tf-20221111175940140500000001/45690831f4838280",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:296014597212:targetgroup/tf-20221111175940140500000001/45690831f4838280",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-20221111175940140500000001",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "Edf_alb_tg"
            },
            "tags_all": {
              "Name": "Edf_alb_tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-023617f000410c2ac"
          },
          "dependencies": [
            "aws_vpc.Edf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "Edf_attchement",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:296014597212:targetgroup/tf-20221111175940140500000001/45690831f4838280-20221111180054798800000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:296014597212:targetgroup/tf-20221111175940140500000001/45690831f4838280",
            "target_id": "i-0570d2495298e69dc"
          },
          "dependencies": [
            "aws_instance.Edf_ec2",
            "aws_lb_target_group.Edf_tg",
            "aws_security_group.ec2-sg01",
            "aws_subnet.pub_subnet",
            "aws_vpc.Edf_vpc",
            "data.aws_ami.linux2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:296014597212:route-table/rtb-0f99f2a69266e751f",
            "id": "rtb-0f99f2a69266e751f",
            "owner_id": "296014597212",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Edf_prvt_rt"
            },
            "tags_all": {
              "Name": "Edf_prvt_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-023617f000410c2ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Edf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:296014597212:route-table/rtb-0d97aca0622b8bb45",
            "id": "rtb-0d97aca0622b8bb45",
            "owner_id": "296014597212",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0caae91716dd27350",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Edf_pub_rt"
            },
            "tags_all": {
              "Name": "Edf_pub_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-023617f000410c2ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Edf_igw",
            "aws_vpc.Edf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db-sub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b447d1acad26350",
            "route_table_id": "rtb-0f99f2a69266e751f",
            "subnet_id": "subnet-07eb5f588ff2571cf"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.database_subnet",
            "aws_vpc.Edf_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-013590d4800eb641a",
            "route_table_id": "rtb-0f99f2a69266e751f",
            "subnet_id": "subnet-08a5652f48c004167"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.database_subnet",
            "aws_vpc.Edf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prvt-sub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da7a96b92bc2aace",
            "route_table_id": "rtb-0f99f2a69266e751f",
            "subnet_id": "subnet-0852866d281e8fdee"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.prvt_subnet",
            "aws_vpc.Edf_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f144e1cdd586ea9",
            "route_table_id": "rtb-0f99f2a69266e751f",
            "subnet_id": "subnet-0e1961ca8441ab496"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.prvt_subnet",
            "aws_vpc.Edf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-sub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6a2bf6f15f6c0d7",
            "route_table_id": "rtb-0d97aca0622b8bb45",
            "subnet_id": "subnet-03506bbf9789f5ac5"
          },
          "dependencies": [
            "aws_internet_gateway.Edf_igw",
            "aws_route_table.public_rt",
            "aws_subnet.pub_subnet",
            "aws_vpc.Edf_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa295f3fabf44f6e",
            "route_table_id": "rtb-0d97aca0622b8bb45",
            "subnet_id": "subnet-0ddb1c4bb0cb8c402"
          },
          "dependencies": [
            "aws_internet_gateway.Edf_igw",
            "aws_route_table.public_rt",
            "aws_subnet.pub_subnet",
            "aws_vpc.Edf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:296014597212:security-group/sg-0002893ff5782161a",
            "description": "The ec2 sg grp",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0002893ff5782161a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow http from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec2-alb-group",
            "name_prefix": "",
            "owner_id": "296014597212",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Edf-alb-sg"
            },
            "tags_all": {
              "Name": "Edf-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-023617f000410c2ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Edf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2-sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:296014597212:security-group/sg-0a00a50d58e3e1845",
            "description": "The ec2 sg grp",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a00a50d58e3e1845",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow http from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow ssh from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ec2-security-group",
            "name_prefix": "",
            "owner_id": "296014597212",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Edf-ec2-sg"
            },
            "tags_all": {
              "Name": "Edf-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-023617f000410c2ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Edf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:296014597212:subnet/subnet-07eb5f588ff2571cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.230.0.128/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07eb5f588ff2571cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "296014597212",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Edf_db_subnet"
            },
            "tags_all": {
              "Name": "Edf_db_subnet"
            },
            "vpc_id": "vpc-023617f000410c2ac"
          },
          "dependencies": [
            "aws_vpc.Edf_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:296014597212:subnet/subnet-08a5652f48c004167",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.230.0.160/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08a5652f48c004167",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "296014597212",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Edf_db_subnet"
            },
            "tags_all": {
              "Name": "Edf_db_subnet"
            },
            "vpc_id": "vpc-023617f000410c2ac"
          },
          "dependencies": [
            "aws_vpc.Edf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prvt_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:296014597212:subnet/subnet-0852866d281e8fdee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.230.0.64/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0852866d281e8fdee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "296014597212",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Edf_prvt_subnet"
            },
            "tags_all": {
              "Name": "Edf_prvt_subnet"
            },
            "vpc_id": "vpc-023617f000410c2ac"
          },
          "dependencies": [
            "aws_vpc.Edf_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:296014597212:subnet/subnet-0e1961ca8441ab496",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.230.0.96/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1961ca8441ab496",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "296014597212",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Edf_prvt_subnet"
            },
            "tags_all": {
              "Name": "Edf_prvt_subnet"
            },
            "vpc_id": "vpc-023617f000410c2ac"
          },
          "dependencies": [
            "aws_vpc.Edf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:296014597212:subnet/subnet-03506bbf9789f5ac5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.230.0.0/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03506bbf9789f5ac5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "296014597212",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Edf_pub_subnet"
            },
            "tags_all": {
              "Name": "Edf_pub_subnet"
            },
            "vpc_id": "vpc-023617f000410c2ac"
          },
          "dependencies": [
            "aws_vpc.Edf_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:296014597212:subnet/subnet-0ddb1c4bb0cb8c402",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.230.0.32/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ddb1c4bb0cb8c402",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "296014597212",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Edf_pub_subnet"
            },
            "tags_all": {
              "Name": "Edf_pub_subnet"
            },
            "vpc_id": "vpc-023617f000410c2ac"
          },
          "dependencies": [
            "aws_vpc.Edf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Edf_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:296014597212:vpc/vpc-023617f000410c2ac",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.230.0.0/16",
            "default_network_acl_id": "acl-0e000e322fa2259e1",
            "default_route_table_id": "rtb-0a377573fdc8b1194",
            "default_security_group_id": "sg-033b35a588cb615f0",
            "dhcp_options_id": "dopt-0beb4a552a1f9ddda",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-023617f000410c2ac",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a377573fdc8b1194",
            "owner_id": "296014597212",
            "tags": {
              "Name": "Edf_vpc"
            },
            "tags_all": {
              "Name": "Edf_vpc"
            }
          }
        }
      ]
    }
  ]
}